crates/aether-derive/tests/ui/rejects_missing_env_prefix.stderr
error: missing `#[config(env_prefix = "...")]` container attribute
 --> tests/ui/rejects_missing_env_prefix.rs:6:1
  |
6 | #[config(cli_prefix = "missing")]
  | ^
